# Ghoul

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ATTRIBUTION  AUTHORS  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md
ext/: CMakeLists.txt  CopySharedLibraries.cmake  FindDevIL.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLM.cmake  FindOpenCL.cmake  FindSOIL.cmake  GroupFilesIntoFolders.cmake  handle_external_library.cmake
ext/freeimage/lib/win64/: FreeImage.lib
ext/il/include/IL/: config.h  config.h.in
ext/lua/: CMakeLists.txt
ext/lz4/: CMakeLists.txt
ext/renderdoc/: CMakeLists.txt
ext/stackwalker/: CMakeLists.txt  LICENSE
ext/stb_image/: CMakeLists.txt  stb_image.c  stb_image.h
include/ghoul/: crc32.h  fmt.h  format.h  framebufferobject.h  freetype.h  ghoul.h  glm.h  glm_ostream.h  syscapabilities.h
include/ghoul/cmdparser/: cmdparser  command_loglevel.h  commandlinecommand.h  commandlinecommand.inl  commandlineparser.h  multiplecommand.h  multiplecommand.inl  predefinedcommands.h  singlecommand.h  singlecommand.inl
include/ghoul/designpattern/: event.h  event.inl  observer.h  observer.inl  singleton.h
include/ghoul/exception/: exception.h
include/ghoul/filesystem/: cachemanager.h  directory.h  file.h  filesystem  filesystem.h
include/ghoul/font/: font.h  fonterrors.h  fontmanager.h  fontrenderer.h
include/ghoul/io/: rawvolumereader.h  volumereader.h
include/ghoul/logging/: bufferlog.h  callbacklog.h  consolelog.h  htmllog.h  log.h  logging  loglevel.h  logmanager.h  logmanager.inl  streamlog.h  textlog.h  visualstudiooutputlog.h
include/ghoul/lua/: ghoul_lua.h  lua_helper.h  lua_helper.inl  lua_types.h  luastate.h
include/ghoul/misc/: any.h  any.inl  assert.h  base64.h  boolean.h  buffer.h  buffer.inl  bufferlog.h  clipboard.h  configurationmanager.h  configurationmanager.inl  configurationmanagerscriptsource.inl  constexpr.h  constmap.h  crc32.h  crc32.inl  csvreader.h  defer.h  easing.h  (+41 more)
scripts/: configurationmanager.lua
src/: CMakeLists.txt  crc32.cpp  framebufferobject.cpp  ghoul.cpp  syscapabilities.cpp  variant.cpp
src/cmdparser/: command_loglevel.cpp  commandlinecommand.cpp  commandlineparser.cpp  multiplecommand.cpp  singlecommand.cpp
src/exception/: exception.cpp
src/filesystem/: cachemanager.cpp  directory.cpp  file.cpp  filesystem.cpp  filesystem.linux.cpp  filesystem.osx.cpp  filesystem.windows.cpp
src/font/: font.cpp  fonterrors.cpp  fontmanager.cpp  fontrenderer.cpp
src/io/: rawvolumereader.cpp  volumereader.cpp
src/io/camera/: camerareader.cpp
src/io/model/: modelanimation.cpp  modelgeometry.cpp  modelmesh.cpp  modelnode.cpp  modelreader.cpp  modelreaderassimp.cpp  modelreaderbase.cpp  modelreaderbinary.cpp  modelreaderlua.cpp  modelreadermultiformat.cpp  modelreaderosmodel.cpp  modelreaderwavefront.cpp
src/io/socket/: socket.cpp  tcpsocket.cpp  tcpsocketserver.cpp  websocket.cpp  websocketserver.cpp
src/io/texture/: texturereader.cpp  texturereaderbase.cpp  texturereadercmap.cpp  texturereaderdevil.cpp  texturereaderdsoil.cpp  texturereaderfreeimage.cpp  texturereaderfreeimage.cpp.rej  texturereaderosimg.cpp  texturereadersoil.cpp  texturereaderstb.cpp  texturewriter.cpp  texturewriterbase.cpp  texturewritersoil.cpp  texturewriterstb.cpp
src/io/volume/: rawvolumereader.cpp  volumereader.cpp
src/logging/: bufferlog.cpp  callbacklog.cpp  consolelog.cpp  htmllog.cpp  htmllog.cpp.rej  log.cpp  loglevel.cpp  logmanager.cpp  streamlog.cpp  textlog.cpp  visualstudiooutputlog.cpp
src/lua/: lua_helper.cpp  lua_types.cpp  luastate.cpp
src/misc/: any.cpp  assert.cpp  base64.cpp  buffer.cpp  bufferlog.cpp  clipboard.cpp  configurationmanager.cpp  crc32.cpp  csvreader.cpp  dictionary.cpp  dictionaryjsonformatter.cpp  dictionaryluaformatter.cpp  easing.cpp  exception.cpp  highresclock.cpp  interpolator.cpp  levmarqsolver.cpp  misc.cpp  onscopeexit.cpp  process.cpp  profiling.cpp  sharedmemory.cpp  stacktrace.cpp  stringhelper.cpp  syscapabilities.cpp  templatefactory.cpp  thread.cpp  threadpool.cpp  typeinfo.cpp  variant.cpp
src/opencl/: clcommandqueue.cpp  clcontext.cpp  clkernel.cpp  clprogram.cpp  clutil.cpp  clworksize.cpp  device.cpp  platform.cpp
src/opengl/: bufferbinding.cpp  debugcontext.cpp  framebufferobject.cpp  openglstatecache.cpp  programobject.cpp  programobjectmanager.cpp  renderdoc.cpp  shadermanager.cpp  shaderobject.cpp  shaderpreprocessor.cpp  texture.cpp  texturearray.cpp  textureatlas.cpp  textureconversion.cpp  texturemanager.cpp  texturereader.cpp  textureunit.cpp  vertexbufferobject.cpp
src/systemcapabilities/: cpucapabilitiescomponent.cpp  generalcapabilitiescomponent.cpp  openclcapabilitiescomponent.cpp  openglcapabilitiescomponent.cpp  systemcapabilities.cpp  systemcapabilitiescomponent.cpp  version.cpp
support/cmake/: CopySharedLibraries.cmake  FindDevIL.cmake  FindGLEW.cmake  FindGLM.cmake  FindLZ4.cmake  GroupFilesIntoFolders.cmake  copy_shared_libraries.cmake  handle_external_library.cmake  include_gtest.cmake  message_macros.cmake  set_ghoul_compile_settings.cmake
support/cppcheck/: suppressions.txt
support/jenkins/: slack_notification.groovy
tests/: CMakeLists.txt  main.cpp  test_buffer.cpp  test_buffer.inl  test_commandlineparser.cpp  test_commandlineparser.inl  test_common.inl  test_configurationmanager.inl  test_crc32.cpp  test_crc32.inl  test_csvreader.cpp  test_csvreader.inl  test_dictionary.cpp  test_dictionary.inl  test_dictionaryjsonformatter.cpp  test_dictionaryjsonformatter.inl  test_dictionaryluaformatter.cpp  test_dictionaryluaformatter.inl  test_filesystem.cpp  test_filesystem.inl  test_luaconversions.cpp  test_luatodictionary.cpp  test_luatodictionary.inl  test_memorypool.cpp  test_memorypool.inl  test_templatefactory.cpp  test_templatefactory.inl  test_threadpool.cpp  test_threadpool.inl
tests/configurationmanager/: test1.cfg  test2.cfg  test3.cfg  test4.cfg  test5.cfg
tests/csvreader/: test0.csv  test0_with_comments.csv
tests/luatodictionary/: test1.cfg  test2.cfg  test3.cfg  test4.cfg  test5.cfg
(+79 files in other folders)
